<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:labelFor="@+id/name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:labelFor="@+id/job"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/job"/>

    <EditText
        android:id="@+id/job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_your_job"
        android:inputType="text"
        />

    <Button
        android:id="@+id/save_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_user"
        android:layout_margin="15dp"/>

</LinearLayout>